--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div id="content">
+      <button onclick="getRandomQuoteUsingArrowFunctions()">Fetch a message!</button>
+      <div id="quote-container"></div>
       <h1>Pranjali Sharma</h1>
       <div id="about">
         <h3>About</h3>
