add JSON communication between server and javascript

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -8,8 +8,6 @@
   </head>
   <body>
     <div id="content">
-      <button onclick="getRandomQuote()">Fetch a message!</button>
-      <div id="quote-container"></div>
       <h1>Pranjali Sharma</h1>
       <div id="about">
         <h3>About</h3>
@@ -73,9 +71,9 @@
         
         <p>Click <a href="gallery.html">here</a> to see my gallery!</p>
 
-      <p>Click here to get a random tv show reference:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
-      <div id="greeting-container"></div>
+      <p>Click here to get a tv show reference:</p>
+      <button onclick="getRandomQuote()">Fetch a message!</button>
+      <div id="quote-container"></div>
     </div>
   </body>
 </html>
