working on live server

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
-  <body onload="getComments()">
+  <body onload=getComments()>
     <div id="content">
       <h1>Pranjali Sharma</h1>
       <div id="about">
@@ -80,8 +80,8 @@
                 <br/><br/>
 
                 <input type="submit" />
-            </form>   
-            <p> Previous Comments</p>
+            </form>  
+            <p>Previous comments</p> 
             <ul id="history"></ul>
         </div>
     </div>
