login-logout feature works

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -82,7 +82,7 @@
                 <input type="submit" />
             </form>  
             <p>Previous comments</p> 
-            <div id= "login-link"></div>
+            <a href="/" id="login-logout"><button></button></a>
             <ul id="history"></ul>
         </div>
     </div>
